# datalad-gooey

./: .all-contributorsrc  .appveyor.yml  .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  requirements-devel.txt  setup.cfg  setup.py  tox.ini
.github/: config.yml
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: build_windows_installer.yml  test_crippledfs.yml  update-contributors.yml
datalad_gooey/: __init__.py  _version.py  active_api.py  active_suite.py  annex_metadata.py  api_utils.py  app.py  askpass.py  catalog_metadata.py  cmd_actions.py  complete_api.py  conftest.py  constraints.py  credentials.py  custom_metadata.py  datalad_ui.py  dataladcmd_exec.py  dataladcmd_ui.py  dataset_actions.py  flowlayout.py  fsbrowser.py  fsbrowser_item.py  fsbrowser_utils.py  fsview_model.py  gooey.py  history_widget.py  lsdir.py  metadata_editor_base.py  metadata_widget.py  param.py  param_alt.py  param_alt_widget.py  param_form_utils.py  param_mixin.py  param_multival.py  param_multival_widget.py  param_path.py  param_path_widget.py  param_widgets.py  postinstall.py  (+6 more)
datalad_gooey/patches/: __init__.py  clone.py
datalad_gooey/resources/desktop/: datalad-gooey.desktop
datalad_gooey/resources/metadata/local/: sample_entry.html
datalad_gooey/resources/ui/: cmdparam_widget.ui  credentials_dialog.ui  main_window.ui  user_dialog.ui
datalad_gooey/tests/: test_constraints.py  test_dataladcmd_exec.py  test_dataladcmd_ui.py  test_fsbrowser.py  test_fsbrowser_item.py  test_lsdir.py  test_param_widget.py  test_register.py  test_resource_provider.py  test_status_light.py  test_utils.py  utils.py
datalad_helloworld/: __init__.py  hello_cmd.py
docs/source/: annexmetadata.rst  conf.py  credentials.rst  datalad-concepts.rst  getting-started.rst  gin.rst  index.rst  installation.rst  metadata.rst
tools/installer_building/: CHANGELOG.md  build_windows_installer.ps1  installer-gooey.nsi  installer-init.nsi  windows-installer-amd64.nsi  windows-installer-gooey-amd64.nsi  windows-installer-gooey-only-amd64.nsi
tools/installer_building/resources/: dl.py  run_gooey.ps1
(+1 files in other folders)
