[metadata]
url = https://github.com/datalad/datalad-gooey
author = The DataLad Team and Contributors
author_email = team@datalad.org
description = A simple GUI for DataLad
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
install_requires =
    applescript; platform_system=='Darwin'
    datalad >= 0.18.1
    datalad_next >= 1.0.0b1
    pyside6
    outdated
    pyqtdarktheme
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = datalad_gooey*

[options.extras_require]
# this matches the name used by -core and what is expected by some CI setups
devel =
    pytest
    pytest-cov
    pytest-qt
    pytest-xvfb
    coverage

[options.entry_points]
# 'datalad.extensions' is THE entrypoint inspected by the datalad API builders
datalad.extensions =
    # the label in front of '=' is the command suite label
    # the entrypoint can point to any symbol of any name, as long it is
    # valid datalad interface specification (see demo in this extensions)
    gooey = datalad_gooey:command_suite
datalad.gooey.suites =
    gooey-simplified = datalad_gooey.simplified_api:gooey_suite
    gooey-complete = datalad_gooey.complete_api:gooey_suite
# install the GUI starter as a direct entrypoint to avoid the datalad CLI
# overhead
gui_scripts =
    datalad-gooey = datalad_gooey.app:main
console_scripts =
    datalad-gooey-askpass = datalad_gooey.askpass:GooeyAskPass.__call__

[versioneer]
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
VCS = git
style = pep440
versionfile_source = datalad_gooey/_version.py
versionfile_build = datalad_gooey/_version.py
tag_prefix =
parentdir_prefix =

[coverage:report]
show_missing = True
omit =
    # versioneer code
    datalad_gooey/_version.py
